<resources>
    <string name="app_name">TGPCET</string>
    <string name="tulsiramji_gaikwad_patil_colleg_of_nengineering_and_technology">Tulsiramji Gaikwad Patil Colleg Of\nEngineering and Technology</string>
    <string name="tulsiramji_gaikwad_college_of_nengineering_and_technology">Tulsiramji Gaikwad College Of\nEngineering and Technology</string>
    <string name="next">Next</string>
    <string name="tgpcet">TGPCET</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">LOGIN</string>
    <string name="continue_with">Continue with</string>
    <string name="welcome_to_n_tgpcet">Welcome to\n TGPCET</string>
    <string name="don_t_have_account">Don\'t Have Account</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_courses">All Courses</string>
    <string name="homefrag">homeFrag</string>
    <string name="top_companies">Top Companies</string>
    <string name="all_programs">All Programs</string>
    <string name="programs">Programs</string>
    <string name="textview">TextView</string>
    <string name="master_of_ncomputer_application">Master of\nComputer Application</string>
    <string name="todo">TODO</string>
    <string name="intake_n_140">Intake\n 140</string>
    <string name="read_more">Read More</string>
    <string name="intake_n135">Intake\n135</string>
    <string name="master_of_nbusiness_administration">Master of\nBusiness Administration</string>
    <string name="guest_user">Guest User</string>
    <string name="email_guestuser123_gmail_com">Email : guestuser123@gmail.com</string>
    <string name="guestuser1234_gmail_com">guestuser1234@gmail.com</string>
    <string name="account_setting">Account Setting</string>
    <string name="back_to_main_page">Back to Main Page</string>
    <string name="search">Search</string>
    <string name="profilenav">profilenav</string>
    <string name="upload">upload</string>
    <string name="conatacts">conatacts</string>
    <string name="help_and_feedback">help and feedback</string>
    <string name="intake_n120">intake\n120</string>
    <string name="computer_science_nand_engineering">Computer Science\nAnd Engineering</string>
    <string name="intake_n150">Intake\n150</string>
    <string name="read_more1">Read More</string>
    <string name="data_science_nand_engineering">Data Science\nAnd Engineering</string>
    <string name="information_ntechnology">Information\nTechnology</string>
    <string name="mechanical_nenginerring">Mechanical\nEnginerring</string>
    <string name="intake_n90">Intake\n90</string>
    <string name="civil_engineering">Civil\nEngineering</string>
    <string name="intake_n60">Intake\n60</string>
    <string name="bio_ntechnology">Bio\nTechnology</string>
    <string name="all">All</string>
    <string name="master_of_nbussines_admisration">Master of\nBussines Admisration</string>
    <string name="education">Education</string>
    <string name="achievements">Achievements</string>
    <string name="contact_information">Contact Information</string>
    <string name="payments_history">PAYMENTS HISTORY</string>
    <string name="privacy_setting">PRIVACY SETTING</string>
    <string name="master_of_bussines_nadministration">Master of Bussines\nAdministration</string>
    <string name="users">Users</string>
    <string name="master_of_computer_application">Master of Computer Application</string>
    <string name="m_c_a_ph_d">M.C.A.,Ph.D*</string>
    <string name="head_nmaster_in_computer_application">Head\nMaster in Computer Application</string>
    <string name="prof_roshan_a_chandekar">PROF. ROSHAN A. CHANDEKAR</string>
    <string name="faketext">I feel ecstatic to introduce you to Department of Master In Computer Application, which is established in year 2008–2009 and foundation of technology. It is AICTE approved full time two years PG course affiliated by RTM Nagpur University. Department of Master in Computer Application strive for increasing the knowledge, enhancing the critical thinking.</string>
    <string name="about_department">About Department</string>
    <string name="dr_atul_tekade">DR. ATUL TEKADE</string>
    <string name="head_nmaster_of_business_administration">Head\nMaster of Business Administration</string>
    <string name="mba">MBA</string>
    <string name="Programs_Outcomes">Progrmas Outcomes</string>
    <string name="programsText">Engineering knowledge: Apply the knowledge of mathematics, science, engineering fundamentals, and an engineering specialization to the solution of complex engineering problems.\nProblem analysis: Identify, formulate, review research literature, and analyze complex engineering problems reaching substantiated conclusions using first principles of mathematics, natural sciences, and engineering sciences.</string>
    <string name="vision_and_mission">Vision and Mission</string>
    <string name="detailsvisionText">Vision\nTo be the source of bringing out globally competent pioneering computing professionals, researchers, innovators and thereby succeed and contribute value to the knowledge-based economy and society.\nMission\nTo enhance the placement ratio of the department.\nTo get more industry interaction and partnership with skill India mission.</string>
    <string name="_03_vision_and_mission">03|Vision and Mission</string>
    <string name="_02_programs_outcomes">02|Programs Outcomes</string>
    <string name="_01_about_depaetment">01|About Depaetment</string>
    <string name="_04_core_faculty">04|Core Faculty</string>
    <string name="prof_sagar_tarekar">Prof. Sagar Tarekar</string>
    <string name="prof_vaishali_patil">Prof. Vaishali Patil</string>
    <string name="prof_shambhavi_holay">Prof. Shambhavi Holay</string>
    <string name="take_addmission">Take Addmission</string>
    <string name="mba_about">TGPCET MBA has a history of excellence in the field of management education. It was formed with a single minded purpose of transforming the budding managers into successful leaders .The department has a team of experienced faculty members of the MBA. In addition, over 20 highly experienced visiting faculties from industry take up advanced electives and other subjects.</string>
    <string name="detail_mba2">Apply knowledge of management theories and practices to solve business problems.\nFoster Analytical and Critical thinking abilities for data-based decision making.\nAbility to understand, analyze and communicate global, economic, legal, and ethical areas of business.</string>
    <string name="visiontext_mba">Vision\nTo become learning centre for management by producing professionally committed managers who will contribute in positive sense towards society and nation building at large.\nMission\nTo be an epitome for higher learning by developing effective leaders and entrepreneurs who anticipate, analyze and manage contemporary as well as emerging business and social issues.</string>
    <string name="prof_archana_amte">Prof. Archana Amte</string>
    <string name="prof_shivam_gupta">Prof. Shivam Gupta</string>
    <string name="dr_pramod_nandhardhane">Dr. Pramod Nandhardhane</string>
    <string name="master_of_computer_napplication">Master of Computer\nApplication</string>
    <string name="campus">Campus</string>
    <string name="_04_syllabus">04|Syllabus</string>
    <string name="syllabus">Syllabus</string>
    <string name="back_to_main">Back to main</string>
    <string name="head_nelectrical_engineering_department">Head\nElectrical Engineering Department</string>
    <string name="b_e_m_tech_phd">B.E., M.Tech, PhD</string>
    <string name="electical_about">
        Electrical Engineering is the one of core branch of Engineering. The Department is NBA Accredited from session 2023-24. The basic infrastructure like electrical power plays the major role in the developing economy. The knowledge of fundamentals of electrical engineering is essential for almost all streams. The Department Of Electrical Engineering provides in depth education and prepares its students for all the possible future career and developments in technology.
    </string>
    <string name="programs_electirc">Engineering Graduates will be able to\n
Engineering knowledge\nApply the knowledge of mathematics, science, engineering fundamentals, and an engineering specialization to the solution of complex engineering problems.\nProblem analysis\nIdentify, formulate, review research literature, and analyze complex engineering problems reaching substantiated conclusions using first principles of mathematics, natural sciences, and engineering sciences.</string>
    <string name="vision_ele">Vision\nTo emerge as a learning hub and centre of excellence in the domain of Electrical Engineering.\nMission\nTo disseminate knowledge replete with quality education in the field of Electrical Engineering in meticulous and methodical manner.To provide platform to address societal issues as well as challenges faced by industries.</string>
    <string name="dr_prashant_thakre">Dr. Prashant Thakre</string>
    <string name="dr_kumari_shipra">Dr. Kumari Shipra</string>
    <string name="mr_radhraman_shaha">Mr. Radhraman Shaha</string>
    <string name="dr_pratik_ghutke">DR. PRATIK GHUTKE</string>
    <string name="library">LIBRARY</string>
    <string name="sport">SPORT</string>
    <string name="facility_offered">FACILITY OFFERED</string>
    <string name="canteenn">CANTEENN</string>
    <string name="student_corner">STUDENT CORNER</string>
    <string name="student_corners">Student Corners</string>
    <string name="_01_student_corners">01|student_corners</string>
    <string name="payment">Payment</string>
    <string name="scholarship_schemes">Scholarship Schemes</string>
    <string name="online_fees_payment"><![CDATA[> Online Fees Payment]]></string>
    <string name="_01_student_corner">01|Student Corner</string>
    <string name="_02_exam_cell">02|Exam Cell</string>
    <string name="result"><![CDATA[> Result]]></string>
    <string name="_03_admission_criteria">03|Admission Criteria</string>
    <string name="criteria">Criteria</string>
    <string name="libraryIntro">Library is the heart of our Institution.\nLibrary provides facilities like open stack areas, individual study tables, reference books section, Reprography section etc.\nBook-Bank facility is also offered to toppers and needy students.</string>
    <string name="librarybye">1.No transaction will be made without the identify card. I-card shall be nontransferable.\n2.Four books will be issued to the students at a time for 15 days.\n3.Re-issue will be made for another 10 days, subject to availability and demand of particular book.\n4.Students entering the library are required to keep their personal belongings in the property counter.</string>
    <string name="sportsabout">INDOOR SPORTS\n1. Table tennis\n2. Chess\n3. Carom\n4. Badminton\nOUTDOOR SPORTS\n1. Cricket\n2. Football\n3. Volleyball\n4. Kabaddi</string>
    <string name="canteentext">College has spacious canteen facility in the campus for the students and staff members and is run by college management.\nA verity of Indian food and snackitems are provided to the students and staff of the college at subsidized rates with quality food.\nRefreshments are available at the college canteen at affordable rates.\nAdequate seating facilities are provided to students and staff.\nThe canteen has a modern kitchen with the latest appliances.</string>
    <string name="facility"> RO, UV Water Purifier with Water Cooler\nCCTV Surveillance\nFire Extinguishers\nFully Wi-Fi Connected\nLaptop and Mobile Charging Point</string>
</resources>