<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mca_Fragment">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/hod_mca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:src="@drawable/logotgp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription">

    </ImageView>

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/prof_roshan_a_chandekar"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/head_nmaster_in_computer_application"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView47"
        app:layout_constraintStart_toStartOf="@+id/textView47"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/m_c_a_ph_d"
        app:layout_constraintEnd_toEndOf="@+id/textView48"
        app:layout_constraintStart_toStartOf="@+id/textView48"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessLeaf">


            <androidx.cardview.widget.CardView
                android:id="@+id/expandable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layouts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_department"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="01|About Department"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/detailsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faketext"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/expandableone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layoutsone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/program_outcomes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/_02_programs_outcomes"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detailsTextone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/programsText"
                        android:visibility="gone" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layoutsThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/visionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/_03_vision_and_mission"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detailsThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detailsvisionText"
                        android:visibility="gone" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layoutsFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/coreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/_04_core_faculty"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fcaultyname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/prof_sagar_tarekar"
                        android:textAlignment="textStart"
                        android:visibility="gone">

                    </TextView>

                    <ImageView
                        android:id="@+id/imageSagar"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center_vertical"
                        android:foregroundGravity="right"
                        android:src="@drawable/sagar_mca"
                        android:visibility="gone"
                        tools:ignore="ContentDescription">

                    </ImageView>

                    <TextView
                        android:id="@+id/vishaliMam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/prof_vaishali_patil"
                        android:textAlignment="textStart"
                        android:visibility="gone">

                    </TextView>

                    <ImageView
                        android:id="@+id/imagevishali"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center_vertical"
                        android:foregroundGravity="right"
                        android:src="@drawable/vaishali_mam"
                        android:visibility="gone"
                        tools:ignore="ContentDescription">

                    </ImageView>

                    <TextView
                        android:id="@+id/holyMam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/prof_shambhavi_holay"
                        android:textAlignment="textStart"
                        android:visibility="gone">

                    </TextView>

                    <ImageView
                        android:id="@+id/imageholay"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center_vertical"
                        android:foregroundGravity="right"
                        android:src="@drawable/holay_mam"
                        android:visibility="gone"
                        tools:ignore="ContentDescription">

                    </ImageView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewfive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layoutsfive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/syllabustext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/_04_syllabus"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/syllabusbtn"
                        android:layout_width="85dp"
                        android:layout_marginTop="10dp"
                        android:layout_height="30dp"
                        android:textColor="@color/white"
                        android:background="@drawable/greenbuttongradient"
                        android:text="@string/syllabus"
                        android:visibility="gone">

                    </androidx.appcompat.widget.AppCompatButton>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp">

            </TextView>

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addmissionButton"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btnbacktwo"
        android:text="@string/take_addmission"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatButton>
</androidx.constraintlayout.widget.ConstraintLayout>